--- a/frontend/web/public/index.html
+++ b/frontend/web/public/index.html
@@ -12,7 +12,7 @@
   <div id="app"></div>
   <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
-  <script src="./dist/bundle.js"></script>
+  <script src="/dist/bundle.js"></script>
   <script src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
